--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
 
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
+  <h1>Hello World</h1>
+  
+  
   Text Formatting in HTML
 
   <!-- Test 2: Wrap the subtitle below, 'A Love Story', in `h2` tags -->
