--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <title>Text Formatting</title>
 </head>
 <body>
+  
+  <p>Hello World</p>
+  
+  <p>Hello Moon</p>
 
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
-  <h1>Hello World</h1>
+  
   
   
   Text Formatting in HTML
