--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   
   <h2>Subtitle</h2>
   
-  <p>Hello World</p>
+   <p>
+    <em>Hello World!</em>
+    <strong>Warning!</strong>
+  </p>
   
   <p>Hello Moon</p>
 
