--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
  <h2> A Love Story</h2>
 
   <!-- Test 3: Wrap the heading below, 'Chapter 1', in `h3` tags -->
-  Chapter One
+  <h3>Chapter One</h3>
 
   <!-- Test 4: Wrap the following two text blocks in separate `p` tags -->
+  <p>
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
   incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
   nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -51,7 +52,7 @@
   ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea
   voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem
   eum fugiat quo voluptas nulla pariatur?
-
+ </p>
 
 </body>
 </html>
